# TranscribeTool

./: .gitignore  README.md  app.py  download.py  install.sh  migrate_folder.py  parse.py  parse.sh  pipeline.sh  pyproject.toml  requirements-gui.txt  requirements.txt  run-gui.sh  transcribe.py  transcribe.sh
docs/: index.html
packaging/: fetch_ffmpeg.sh  make_dmg.sh  transcribe-tool.spec  youtube-tools.spec
transcribe_tool/: __init__.py  backend.py  config.py  main.py  main_window.py  paths.py
transcribe_tool/jobs/: job_runner.py
transcribe_tool/widgets/: _constants.py  _runnable.py  drop_text_edit.py  log_pane.py  parse_tab.py  settings_dialog.py  transcribe_tab.py  unified_tab.py
youtube_tools_gui/: __init__.py  config.py  main.py  main_window.py  paths.py
youtube_tools_gui/jobs/: pipeline_runner.py
youtube_tools_gui/widgets/: download_tab.py  pipeline_tab.py  settings_dialog.py
