[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-tools"
version = "0.1.0"
description = "Scrape, download, and transcribe YouTube channels."
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[default]",
    "platformdirs",
    "faster-whisper",
    "mlx-whisper ; platform_machine == 'arm64' and sys_platform == 'darwin'",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pyinstaller>=6.0"]

[project.scripts]
youtube-tools-gui = "youtube_tools_gui.main:main"

[tool.setuptools]
py-modules = ["parse", "download", "transcribe", "app"]

[tool.setuptools.packages.find]
include = ["youtube_tools_gui*"]
